--- a/space-finder/package.json
+++ b/space-finder/package.json
@@ -20,11 +20,15 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.3.12",
+    "@aws-sdk/client-cognito-identity": "^3.687.0",
     "@aws-sdk/client-dynamodb": "^3.687.0",
     "@aws-sdk/client-s3": "^3.688.0",
+    "@aws-sdk/credential-providers": "^3.687.0",
     "@aws-sdk/lib-dynamodb": "^3.689.0",
     "@aws-sdk/util-dynamodb": "^3.689.0",
     "@types/uuid": "^10.0.0",
+    "aws-amplify": "^6.4.4",
     "uuid": "^11.0.3"
   }
 }
